--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
+            src="./assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
             alt="Mulher negra vestindo moletom verde com as duas mãos no peito e sorrindo"
           />
 
